# test-ghc

./: LICENSE  flake.nix  test-ghc.cabal
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: d98lxwa3j3ldn083rrpbglib9sh7ai9i-source
src/: Main.hs
