name: test-ghc
version: 0.1.0.0
license:            MIT
license-file:       LICENSE
author:             haruki7049
maintainer:         tontonkirikiri@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable test-ghc
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base >=4.18.2.1,
        cmdargs >=0.10.22
    hs-source-dirs:   src
    default-language: Haskell2010
